# gui-image-studio

./: .coveragerc  .flake8  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTOR_SETUP_SUMMARY.md  COVERAGE_QUICK_START.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_UPDATE_v1.1.0.md  DUPLICATION_ANALYSIS.md  DYNAMIC_TOOL_SYSTEM_COMPLETE.md  EFFECTS_SYSTEM_SUMMARY.md  EXAMPLES_SUMMARY.md  GIF_ANIMATION_SUMMARY.md  HELP_SYSTEM_UPDATE_v1.1.0.md  IMAGE_USAGE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INFO_BUTTON_FEATURE.md  LICENSE  MANIFEST.in  MEMORY_FIXES.md  Makefile  PACKAGE_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  ROTATION_FIXES.md  TEXT_TOOL_FIX_SUMMARY.md  TEXT_TOOL_TEST_RESULTS.md  TRANSPARENCY_FEATURES.md  USER_GUIDE.md  check_markdown_formatting.py  create_effect_icons.py  (+22 more)
.github/: DEVELOPMENT_FLOW.md  PYPI_SETUP.md  README_DEV.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  docs-check.yml  docs.yml  generate-demo-gif.yml  generate-demo-gifs.yml  release.yml  test-pypi.yml
dev/: DEPLOYMENT_GUIDE.md  README.md  SETUP_SUMMARY_BRANCH_PROTECTION_COMPLETE.md  SETUP_SUMMARY_COMPLETE_DEVELOPMENT_SYSTEM.md  SETUP_SUMMARY_DEVELOPMENT_FLOW.md  SUMMARY_FEATURE_20250616_173250.md  SUMMARY_GENERAL_20250616_163428.md  SUMMARY_GENERAL_20250616_172528.md
docs/: .code-check-ignore  CNAME  CODE_CHECK_IGNORE.md  COVERAGE.md  EXAMPLES_SUMMARY.md  GIF_ANIMATION_SUMMARY.md  GITHUB_PAGES_SETUP.md  IMAGE_DESIGNER_GUI.md  Makefile  README.md  UNIFIED_CORE.md  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  quickstart.rst  requirements-docs.txt
docs/_static/: .gitkeep
docs/api/: cli.rst  generator.rst  image_loader.rst  image_studio.rst  index.rst  sample_creator.rst
docs/api/_autosummary/: gui_image_studio.cli.create_sample_images.rst  gui_image_studio.cli.generate_embedded_images.rst  gui_image_studio.cli.launch_designer.rst  gui_image_studio.create_sample_images.rst  gui_image_studio.embed_images_from_folder.rst  gui_image_studio.get_image.rst  gui_image_studio.launch_designer.rst
docs/examples/: animation_creation.rst  basic_usage.rst  image_processing.rst  index.rst
docs/user_guide/: animation_tools.rst  api_usage.rst  batch_operations.rst  command_line_tools.rst  first_steps.rst  image_processing.rst  index.rst  installation_guide.rst  interface_overview.rst  theme_system.rst  troubleshooting.rst
examples/: 01_basic_usage.py  02_theming_examples.py  03_image_transformations.py  04_animated_gifs.py  05_advanced_features.py  06_image_designer_gui.py  07_using_designed_images.py  GIF_ANIMATION_EXAMPLES.md  README.md  ctk_gif_animations.py  ctkanimatedgif.py  ctkcontrast_saturation.py  effects_toolkit_demo.py  gif_animation_showcase.py  gif_creator.py  run_examples.py  tkcontrast_saturationdemo.py  unified_core_demo.py  unified_functionality_demo.py  unified_sample_creation_demo.py
scripts/: build-docs.ps1  build-docs.py  demo_generator.py  release.py  run_coverage.ps1  run_coverage.py  setup-dev.py  verify-install.py  verify-pages.py  version_bump.py
src/: generator.py  image_loader.py  img2res.py
src/gui_image_studio/: __init__.py  __main__.py  cli.py  embedded_icons.py  embedded_images.py  generator.py  image_loader.py  image_studio.py  sample_creator.py
src/gui_image_studio/cli/: __init__.py  commands.py
src/gui_image_studio/core/: __init__.py  code_generation.py  effects_registry.py  file_operations.py  image_effects.py  io_utils.py  sample_creation.py
src/gui_image_studio/image_studio/: README.md  __init__.py  main_app.py
src/gui_image_studio/image_studio/core/: __init__.py  canvas_manager.py  drawing_tools.py  image_effects.py  image_manager.py
src/gui_image_studio/image_studio/toolkit/: __init__.py
src/gui_image_studio/image_studio/toolkit/effects/: __init__.py  base_effect.py  blur_effect.py  brightness_effect.py  contrast_effect.py  edge_enhance_effect.py  emboss_effect.py  flip_horizontal_effect.py  flip_vertical_effect.py  grayscale_effect.py  invert_effect.py  posterize_effect.py  rotate_effect.py  saturation_effect.py  sepia_effect.py  sharpen_effect.py  solarize_effect.py
src/gui_image_studio/image_studio/toolkit/icons/: __init__.py
src/gui_image_studio/image_studio/toolkit/tools/: __init__.py  base_tool.py  brush_tool.py  circle_tool.py  eraser_tool.py  fill_tool.py  line_tool.py  pencil_tool.py  rectangle_tool.py  spray_tool.py  text_tool.py
src/gui_image_studio/image_studio/ui/: __init__.py  center_panel.py  context_help.py  dialogs.py  help_system.py  left_panel.py  menu.py  panels.py  right_panel.py
src/gui_image_studio/image_studio/utils/: __init__.py  tooltip.py
src/img2res/: __init__.py  cli.py  embedded_images.py  generator.py
tests/: __init__.py  test_basic_pytest.py  test_code_generation.py  test_effects_registry.py  test_embedded.py  test_gif_animation.py  test_image_effects.py  test_integration.py  test_io_utils.py  test_package.py  test_sample_creation.py  test_tint_visibility.py
