[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-image-studio"
version = "1.0.0"
description = "GUI Image Studio - Complete toolkit for creating, embedding, and managing images in Python GUI applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stan Griffiths", email = "stantgriffiths@gmail.com"},
]
maintainers = [
    {name = "Stan Griffiths", email = "stantgriffiths@gmail.com"},
]
keywords = ["image", "gui", "tkinter", "customtkinter", "embed", "resources", "PIL", "Pillow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: User Interfaces",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "Pillow>=8.0.0",
]

[project.optional-dependencies]
customtkinter = ["customtkinter>=5.0.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
examples = [
    "customtkinter>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/stntg/gui-image-studio"
Documentation = "https://github.com/stntg/gui-image-studio#readme"
Repository = "https://github.com/stntg/gui-image-studio"
"Bug Reports" = "https://github.com/stntg/gui-image-studio/issues"

[project.scripts]
gui-image-studio-generate = "gui_image_studio.cli:generate_embedded_images"
gui-image-studio-create-samples = "gui_image_studio.cli:create_sample_images"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gui_image_studio = ["*.py"]

